2017-10-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/webp.c (WriterCallback): WebP writer now detects partial
	write to output file.  Patch by Przemysław Sobala from a posting
	on Mon, 16 Oct 2017 via the graphicsmagick-help mailing list.

2017-10-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (MontageImageCommand): Fix memory leaks in
	error return path.  Only people doing leak testing or the few who
	execute MontageImageCommand() as a function will care about this.

	* magick/studio.h (NumberOfObjectsInArray): The
	NumberOfObjectsInArray() macro is used to compute the number of
	whole objects in an array.  Instead it was rounding up, resulting
	in scrambling the heap beyond the allocation.  Fixes
	CVE-2017-13737 "There is an invalid free in the MagickFree
	function in magick/memory.c in GraphicsMagick 1.3.26 that will
	lead to a remote denial of service attack."

2017-10-09  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>

	* coders/png.c (ReadOnePNGImage): Suppress "comparison between
	signed and unsigned integer expressions" warning.
	* coders/png.c (ReadJNGImage): Fix memory leak in SourceForge
	Issue #469 "use after free in ReadJNGImage".
	* coders/png.c (ReadJNGImage): Fix memory leak in SourceForge
	Issue #470 "Assert failure in writeblob".

2017-10-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* doc/options.imdoc: Fix SourceForge issue #444 "gm mogrify: Wrong
	documentation for option -output-directory".

2017-10-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/module.c (InitializeModuleSearchPath): Verify that any
	component paths specified in MAGICK_CODER_MODULE_PATH and
	MAGICK_FILTER_MODULE_PATH exist before adding them to search paths
	actually used, and convert to real paths if possible.  This avoids
	possible use of relative paths to load modules (a possible
	security issue) and may improve efficiency by removing
	non-existent paths.
