@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020171017"
-#define public MagickPackageReleaseDate "snapshot-20171017"
+#define public MagickPackageVersionAddendum ".020171021"
+#define public MagickPackageReleaseDate "snapshot-20171021"
